# farbename

./: Cargo.toml  Makefile  README.md  colours.db  colourtable.csv
src/: arg_parser.rs  db.rs  main.rs  utils.rs
