[package]
name = "farbename"
version = "0.1.0"
edition = "2021"
authors = ["Max Gilmour"]

[dependencies]
camino = "1.1.9"
clap = { version = "4.5.27", features = ["derive", "string", "cargo"] }
color-eyre = "0.6.3"
reqwest = "0.12.12"

[build-dependencies]
vergen = { version = "9.0.4", features = ["build", "si"] }
